--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>AirBnB Clone</title>
-    <style>
-      body {
-        margin:  0;
-        padding:  0;
-      }
-      header {
-        background-color: #FF0000;
-        height:  70px;
-        width:  100%;
-      }
-      footer {
-        background-color: #00FF00;
-        height:  60px;
-        width:  100%;
-        bottom:  0;
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
-  </head>
-  <body>
-    <header></header>
-    <footer>
+  <title>AirBnB Clone</title>
+  <body style="margin: 0;
+	       padding: 0">
+    <header style="background-color: #FF0000;
+		   height: 70px;
+                   width: 100%">
+    </header>
+    <footer style="background-color: #00FF00;
+		   height: 60px;
+                   width: 100%;
+                   bottom: 0;
+                   position: absolute;
+                   display: flex;
+                   justify-content: center;
+                   align-items: center;">
       Best School
     </footer>
   </body>
